fixed alignment issues with event card

--- a/src/components/EventCard/EventCard.css
+++ b/src/components/EventCard/EventCard.css
@@ -3,6 +3,7 @@
     border: 1px solid black;
     margin: 0 24px 24px 0;
     border-radius: 2px;
+    min-height: 157px;
 }
 .Highlighted:hover {
     box-shadow: 0px 0px 16px 0px rgba(0, 0, 0, 0.2);
